# afilmory-lite

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.runtime  Dockerfile.web  LICENSE  README.md  README.zh-CN.md
.github/workflows/: release.yml
admin-web/: build.mjs  dev.mjs  gen-font.mjs  package.json
admin-web/src/: admin.html  styles.css
docker/: Dockerfile.web  afilmory.example.toml  docker-compose.yml
docs/: afilmory-config-diff.md  afilmory-feature-inventory.md  afilmory-ui-style.md  future-options.md
docs/superpowers/plans/: 2026-06-17-afilmory-lite-m1-builder-core.md  2026-06-17-afilmory-lite-m1b-server.md  2026-06-17-afilmory-lite-m2-s3.md
docs/superpowers/specs/: 2026-06-17-afilmory-lite-rs-design.md
scripts/: build-web.sh  compare-exif.py
src/: builder.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/exif/: exiftool.rs  mod.rs
src/manifest/: incremental.rs  mod.rs  model.rs  store.rs
src/pipeline/: decode.rs  geocoding.rs  heic.rs  info.rs  mod.rs  motion_photo.rs  process.rs  thumbhash.rs  thumbnail.rs  tone.rs
src/scheduler/: mod.rs
src/server/: admin_page.html  inject.rs  mod.rs
src/storage/: local.rs  mod.rs  s3.rs  sigv4.rs
tests/: build_integration.rs  serve_integration.rs
