[package]
name = "afilmory-lite"
version = "0.1.0"
edition = "2024"

[lib]
name = "afilmory_lite"
path = "src/lib.rs"

[[bin]]
name = "afilmory-lite"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "sync"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
thiserror = "2"
image = "0.25"
thumbhash = "0.1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
walkdir = "2"
bytes = "1"
tracing = "0.1"
tempfile = "3"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
